--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-[x-cloak] { display: none !important; }
+[x-cloak] {
+    display: none !important;
+}
